login floating right now but toolbar length is taking up too much space. Must correct.

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -15,7 +15,7 @@
 .nav-link {
   float: right;
   color: #f2f2f2;
-  text-align: center;
+  text-align: right;
   padding: 24px 10px;
   text-decoration: none;
   font-size: 15px;
